# pgtest002

./: .dockerignore  .env.example  .gitignore  .plan  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
docs/: spec-check.md
migrations/: 0001_create_todos.sql
public/assets/: todomvc.css
src/: app.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  routes.rs  server_fns.rs  state.rs
src/api/: dto.rs  error.rs  mod.rs  routes.rs
src/components/: footer.rs  header.rs  todo_item.rs  todo_list.rs
src/todos/: model.rs  repo.rs
tests/: api.rs  repo.rs
